bayesian.htmlを修正、PDFを追加

--- a/bayesian.html
+++ b/bayesian.html
@@ -113,16 +113,16 @@
         <dt class=leftline>X線小角散乱</dt>
         <dd class="para1">第25回情報論的学習理論ワークショップ (IBIS2022)<br>
 		林悠偉、片上舜、桑本滋生、永田賢二、水牧仁一朗、岡田真人<br>
-「小角散乱法の計測データを用いた試料パラメータのベイズ推定」<p>
-
-第88回SPring-8先端利用技術ワークショップ/<br>
-			「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」2023年３月<br>
-林悠偉、片上舜、桑本滋生、永田賢二、水牧仁一朗、岡田真人<br>
-「小角散乱法の計測データを用いた試料パラメータのベイズ推定」<p>
+「<a href="pdf/2022ibis_hayashi.pdf">小角散乱法の計測データを用いた試料パラメータのベイズ推定</a>」
+<p> 第88回SPring-8先端利用技術ワークショップ/<br>
+  「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」2023年３月<br>
+  林悠偉、片上舜、桑本滋生、永田賢二、水牧仁一朗、岡田真人<br>
+  「<a href="pdf/spring8_hayashi.pdf">小角散乱法の計測データを用いた試料パラメータのベイズ推定</a>」</p>
+<p>
 
 物理学会第77回年次大会、2023年3月<br>
 林悠偉、片上舜、桑本滋生、永田賢二、水牧仁一朗、岡田真人<br>
-「小角散乱法データを用いた試料パラメータのベイズ推論」<br>
+「<a href="pdf/2023jpsj_hayashi.pdf">小角散乱法データを用いた試料パラメータのベイズ推論</a>」<br>
 Yui Hayashi, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, Masato Okada.
 “<a href="https://arxiv.org/abs/2303.04983">Bayesian Inference for Small-Angle Scattering Data</a>”, March, 2023.
 <p>
@@ -147,13 +147,13 @@ Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br
 <dt  class=leftline> NMR</dt>
         <dd class=para1>第25回情報論的学習理論ワークショップ（IBIS2022）<br>
 			上田朔, 片上舜, 吉田章吾, 小山岳秀, 中井祐介, 水戸毅, 水牧仁一郎, 岡田真人<br>
-			「核磁気共鳴法へのデータ駆動科学的アプローチ」<p>
-			物理学会第77回年次大会、2023年3月<br>
-			上田朔, 片上舜, 吉田章吾, 中井祐介, 水戸毅, 水牧仁一朗, 岡田真人<br>
-			「核磁気共鳴法へのデータ駆動科学的手法の開発」 <br>
-			Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
-			"<a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.92.054002">Bayesian Approach to T1 Analysis in NMR Spectroscopy with Applications to Solid State Physics</a>" <br>
-			Journal of the Physical Society of Japan.92, 054002 (2023)
+			「<a href="pdf/2022ibis_ueda.pdf">核磁気共鳴法へのデータ駆動科学的アプローチ</a>」
+			<p> 物理学会第77回年次大会、2023年3月<br>
+			  上田朔, 片上舜, 吉田章吾, 中井祐介, 水戸毅, 水牧仁一朗, 岡田真人<br>
+			  「核磁気共鳴法へのデータ駆動科学的手法の開発」 <br>
+			  Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
+  "<a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.92.054002">Bayesian Approach to T1 Analysis in NMR Spectroscopy with Applications to Solid State Physics</a>" <br>
+			  Journal of the Physical Society of Japan.92, 054002 (2023) </p>
 			<p>
 			Hajime Ueda, Shun Katakami, Shogo Yoshida, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
 			"<a href="https://arxiv.org/abs/2305.05170">Efficient NMR measurement and data analysis supported by the Bayesian inference: The case of the heavy fermion compound YbCo2Zn20</a>", <br>
@@ -162,11 +162,11 @@ Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br
 <dt  class=leftline> 磁化率と比熱およびベイズ統合</dt>
         <dd class=para1>第25回情報論的学習理論ワークショップ（IBIS2022）<br>
 西村怜，片上舜，永田賢二，水牧仁一朗，岡田真人<br>
-「複数実験結果を用いたベイズ推論によるパラメータ推定」<p>
-
-物理学会第77回年次大会、2023年3月<br>
-西村怜，片上舜，永田賢二，水牧仁一朗，岡田真人<br>
-「ベイズ統合による結晶場ハミルトニアンパラメータ推定」<p>
+「<a href="pdf/2022ibis_nishimura.pdf">複数実験結果を用いたベイズ推論によるパラメータ推定</a>」
+<p> 物理学会第77回年次大会、2023年3月<br>
+  西村怜，片上舜，永田賢二，水牧仁一朗，岡田真人<br>
+  「<a href="pdf/2023jpsj_nishimura.pdf">ベイズ統合による結晶場ハミルトニアンパラメータ推定</a>」</p>
+<p>
 
         </dd>
 <p class=home>複雑理工学専攻でのベイズ計測の水平展開</p>
