bayesian.htmlを修正、PDFを追加

--- a/bayesian.html
+++ b/bayesian.html
@@ -104,12 +104,14 @@
         <dd class=para1>
         第24回情報論的学習理論ワークショップ (IBIS2021) <br>
 			森口椋太, 片上瞬, 永田賢ニ, 水牧 仁一朗, 岡田真人<br>
-			「メスバウアー分光スペクトルデータに対するベイジアンモデル選択」 <p>
-			物理学会第77回年次大会、2022年3月<br>
-			森口椋太、筒井智嗣、片上舜、永田賢二、水牧仁一朗、岡田真人<br>
-			「メスバウアースペクトルに対するベイズ計測」<br>
-			Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada.<br>
-			“<a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.91.104002">Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy</a>”,<br> Journal of the Physical Society of Japan, 91, 104002 (2022)                     </dd>
+			「<a href="pdf/2022ibis_moriguchi.pdf">メスバウアー分光スペクトルデータに対するベイジアンモデル選択</a>」
+            <p> 物理学会第77回年次大会、2023年3月<br>
+              森口椋太、筒井智嗣、片上舜、永田賢二、水牧仁一朗、岡田真人<br>
+              「<a href="pdf/2023jpsj_moriguchi.pdf">メスバウアースペクトルに対するベイズ計測</a>」<br>
+Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada.<br>
+              “<a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.91.104002">Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy</a>”,<br>
+              Journal of the Physical Society of Japan, 91, 104002 (2022) </p>
+        </dd>
         <dt class=leftline>X線小角散乱</dt>
         <dd class="para1">第25回情報論的学習理論ワークショップ (IBIS2022)<br>
 		林悠偉、片上舜、桑本滋生、永田賢二、水牧仁一朗、岡田真人<br>
@@ -130,11 +132,11 @@ Yui Hayashi, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, 
 <dt class=leftline>X線吸収スペクトル</dt>
         <dd class=para1>第25回情報論的学習理論ワークショップ (IBIS2022)<br>
 		竝河伴裕、永田賢二、片上舜、水牧仁一郎、岡田真人<br>
-「ベイズ推論による光吸収スペクトルのスペクトル分解」<p>
-
-物理学会第77回年次大会、2022年3月<br>
-竝河伴裕、永田賢二、片上舜、水牧仁一郎、岡田真人<br>
-「ベイズ推論による光吸収スペクトルのスペクトル分解」<p>
+「<a href="pdf/2022ibis_nabika.pdf">ベイズ推論による光吸収スペクトルのスペクトル分解</a>」
+<p> 物理学会第77回年次大会、2023年3月<br>
+  竝河伴裕、永田賢二、片上舜、水牧仁一郎、岡田真人<br>
+  「<a href="pdf/2023jpsj_nabika.pdf">ベイズ推論による光吸収スペクトルのスペクトル分解</a>」</p>
+<p>
 
 Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br>
 “<a href="https://arxiv.org/abs/2212.07053">Bayesian Inference of Absorption Spectra Based on Binomial Distribution</a>”, December, 2022.
