--- a/bayesian.html
+++ b/bayesian.html
@@ -94,21 +94,26 @@
 		   <a href="pdf/2017SpMTutorial.pdf"> 2017年度チュートリアル　第４節</a></dd>   
 <dt class=leftline>スペクトル分解</dt>
 		<dd class=para1>  
-		  2012年12月17日　物性研&nbsp;「<a href="pdf/2012_issp.pptx">ベイズ推論と物性科学</a>」<br>
-2019年3月6日 <a href="http://www.ar.sanken.osaka-u.ac.jp/SIG-MEI/SIG-MEI_No2.html" target="_blank" rel="noopener noreferrer">第２回計測インフォマティクス研究会（人工知能第２種研究会）</a>　　<a href="pdf/2019bayesianmeasurement.pdf">ベイズ計測</a><br>
+		  2012年12月17日　物性研<br>
+			「<a href="pdf/2012_issp.pptx">ベイズ推論と物性科学</a>」<p>
+			
+2019年3月6日 <a href="http://www.ar.sanken.osaka-u.ac.jp/SIG-MEI/SIG-MEI_No2.html" target="_blank" rel="noopener noreferrer">第２回計測インフォマティクス研究会（人工知能第２種研究会）</a><br>
+			<a href="pdf/2019bayesianmeasurement.pdf">ベイズ計測</a><p>
+			
 2023年3月7日 「第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」<br>
+ベイズ計測<p>
+			
+2023年3月30日 「データ駆動科学と情報計測の新展開」<br>
+ベイズ推論とSpMに基づく計測の情報数理基盤の構築<p>
 
-2023年3月30日 「データ駆動科学と情報計測の新展開」
-ベイズ推論とSpMに基づく計測の情報数理基盤の構築<br>
+2023年3月31日 「人工知能とその応用シンポジウム」<br>
+人工知能応用とデータ駆動科学　Abstract<p>
 
-2023年3月31日 「人工知能とその応用シンポジウム」
-人工知能応用とデータ駆動科学　Abstract<br>
+2023年4月19日 「学融合セミナー」<br>
+複雑理工学専攻とデータ駆動科学<p>
 
-2023年4月19日 「学融合セミナー」
-複雑理工学専攻とデータ駆動科学<br>
-
-2023年5月15日 「DX-GEM拠点2023年度第2回研究会」
-ベイズ計測とSPring-8全ビームラインベイズ化計画<br>
+2023年5月15日 「DX-GEM拠点2023年度第2回研究会」<br>
+ベイズ計測とSPring-8全ビームラインベイズ化計画<p>
 		  </dd>   
 
 <p class=home> SPring-8全ビームラインベイズ化計画</p>
