--- a/bayesian.html
+++ b/bayesian.html
@@ -95,7 +95,7 @@
 <dt class=leftline>スペクトル分解</dt>
 		<dd class=para1>  
 		  2012年12月17日　物性研<br>
-			「<a href="pdf/2012_issp.pptx">ベイズ推論と物性科学</a>」<p>
+			<a href="pdf/2012_issp.pdf">ベイズ推論と物性科学</a><p>
 			
 2019年3月6日 <a href="http://www.ar.sanken.osaka-u.ac.jp/SIG-MEI/SIG-MEI_No2.html" target="_blank" rel="noopener noreferrer">第２回計測インフォマティクス研究会（人工知能第２種研究会）</a><br>
 			<a href="pdf/2019bayesianmeasurement.pdf">ベイズ計測</a><p>
