--- a/bayesian.html
+++ b/bayesian.html
@@ -100,20 +100,20 @@
 2019年3月6日 <a href="http://www.ar.sanken.osaka-u.ac.jp/SIG-MEI/SIG-MEI_No2.html" target="_blank" rel="noopener noreferrer">第２回計測インフォマティクス研究会（人工知能第２種研究会）</a><br>
 			<a href="pdf/2019bayesianmeasurement.pdf">ベイズ計測</a><p>
 			
-2023年3月7日 「第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」<br>
-ベイズ計測<p>
+2023年3月7日  「<a href="http://www.spring8.or.jp/ja/science/meetings/2023/230307/"target="_blank"rel="noopener noreferrer">第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～</a>」<br>
+<a href="images/20230307_okada.pdf">ベイズ計測</a><p>
 			
-2023年3月30日 「データ駆動科学と情報計測の新展開」<br>
-ベイズ推論とSpMに基づく計測の情報数理基盤の構築<p>
+2023年3月30日 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
+<a href="pdf/20230330.pdf">ベイズ推論とSpMに基づく計測の情報数理基盤の構築</a><p>
 
-2023年3月31日 「人工知能とその応用シンポジウム」<br>
-人工知能応用とデータ駆動科学　Abstract<p>
+2023年3月31日 「<a href="https://www.ai-cit-nihon-u.com/symposium/"target="_blank" rel="noopener noreferrer">人工知能とその応用シンポジウム</a>」<br>
+<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>　<a href="pdf/20230331abstract.pdf">Abstract</a><p>
 
-2023年4月19日 「学融合セミナー」<br>
-複雑理工学専攻とデータ駆動科学<p>
+2023年4月19日 「<a href="https://www.k.u-tokyo.ac.jp/education/seminar/"target="_blank" rel="noopener noreferrer">学融合セミナー</a>」<br>
+<a href="pdf/20230419.pdf">複雑理工学専攻とデータ駆動科学</a><p>
 
 2023年5月15日 「DX-GEM拠点2023年度第2回研究会」<br>
-ベイズ計測とSPring-8全ビームラインベイズ化計画<p>
+<a href="pdf/20230515DX-GEM.pdf">ベイズ計測とSPring-8全ビームラインベイズ化計画</a><p>
 		  </dd>   
 
 <p class=home> SPring-8全ビームラインベイズ化計画</p>
