okada/index.htmlを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -1993,7 +1993,7 @@ Journal of the Physical Society of Japan,56(2), 798-809, (1987)
 				</header>
 				<div class="inner">
 					<div class="article">
-<ol reversed="reversed" start="31">
+<ol reversed="reversed" start="33">
 
 <li>岡田 真人<br>
   <a href="https://www.jstage.jst.go.jp/article/jnns/29/1/29_1/_pdf" target="_blank"rel="noopener noreferrer">視覚情報処理の解明からデータ駆動科学へ</a><br>
@@ -2010,6 +2010,12 @@ Journal of the Physical Society of Japan,56(2), 798-809, (1987)
 情報処理学会論文誌　数理モデル化と応用、Vol.12, No.3, pp.37-45, (2019)
 </li>
 
+<li>
+岩満 一功, 相原 慎吾, 溝口 幸司, 五十嵐 康彦, 村田 伸, 岡田 真人, 赤井 一郎<br>
+SpDMDによるコヒーレントフォノンの減衰振動モード分解<br>
+人工知能学会全国大会論文集 JSAI2017 2I21-2I21,(2017)
+</li>
+	
 <li>
 桑谷立, 中田令子, 岡田真人, 堀高峰<br>
 スパースモデリングの地球物理学への応用<br>
@@ -2055,7 +2061,7 @@ Journal of the Physical Society of Japan,56(2), 798-809, (1987)
 <li>
 井出 大介, 松本 有央, 渡辺 正峰, 岡田 真人<br>
 減衰シナプスを持つアトラクターネットワークの想起特性<br>
-電子情報通信学会和文論文誌, J87-D-II(9), 1842-1850, 2004
+電子情報通信学会和文論文誌, J87-D-II(9), 1842-1850,(2004)
 </li>
 
 <li>
@@ -2118,7 +2124,13 @@ Mexican Hat 型結合を持つ Synfire Chain の解析<br>
 非単調ニューロンを用いて相関学習された連想記憶モデルのS/N解析<br>
 日本神経回路学会誌，8(3), 86-93, (2001)
 </li>
-
+	
+<li>
+綴木 馴, 岡田 真人<br>
+18pRD-15 空間的な相関を持つノイズ下での画像修復<br>
+日本物理学会講演概要集 56 202-202 (2001)  
+</li>
+	
 <li>
 三好 誠司，岡田 真人<br>
 Syn-fire chainモデルの理論<br>
