岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,12 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="319">
+<ol reversed start="320">
+
+<li>Hiroshi Shinotsuka, Kenji Nagata, Malinda Siriwardana, Hideki Yoshikawa, Hayaru Shouno, Masato Okada<br>
+"Sample structure prediction from measured XPS data using Bayesian estimation and SESSA simulator"<br>
+Journal of Electron Spectroscopy and Related Phenomena, 147370(2023)
+</li>	
 
 <li>Ryuta Sasaki1, Shunki Nakagawa, Kazushi Mimura, Masato Okada, Toru Aonishi, and Yoshihisa Yamamoto<br>
 "Effect of Coupling Discretization on Coherent-Ising-Machine-Implemented Hopfield Model"<br>
