岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,12 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="320">
+<ol reversed start="321">
+
+<li>Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuki Kawahara, Naoya Shibata, Masato Okada<br>
+"Fast reconstruction of scanning transmission electron microscopy images using Markov random field model"<br>
+Ultramicroscopy, 113811 (2023)
+</li>
 
 <li>Hiroshi Shinotsuka, Kenji Nagata, Malinda Siriwardana, Hideki Yoshikawa, Hayaru Shouno, Masato Okada<br>
 "Sample structure prediction from measured XPS data using Bayesian estimation and SESSA simulator"<br>
