Add details on research descriptions

--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -26,11 +26,46 @@
 	  </ul>
 	</ul>
 	<hr>
-	<ul> 
 	  <li>プロフィール</li>
 	  2022.3 東京理科大学　理工学部　物理学科 卒業<br>
 	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　入学<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
+	<h2>Published Papers</h2>
+	<ul>
+	<li class="fs11">
+	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
+	    <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
+	    arXiv:2303.04983, J. Phys. Soc. Jpn., in press., 2023.
+	</li>
+	</ul>
+	
+	<h2>Invited Lectures</h2>
+	<ul>
+	<li class="fs11">
+	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
+	    <i>"Bayesian Estimation of Sample Parameters Using Small-Angle Scattering Measurement Data"</i>,
+	    Presented at the 88th SPring-8 Advanced Technology Workshop / The 4th Data-Driven Science for Advanced Data Analysis: Bayesian Measurement,
+	    SACLA Experimental Research Building Conference Room, Hybrid Web Event, 2023.
+	</li>
+	</ul>
+	<h2>Conference/Symposium Presentations</h2>
+	<ul>
+	<li class="fs11">
+	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
+	    <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
+	    Information-Based Induction Sciences and Machine Learning (IBIS2022),
+	    TSUKUBA International Congress Center, 2-010, November 2022.
+	</li>
+    <br>
+	<li class="fs11">
+	    <strong>Yui Hayashi</strong>, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, and Masato Okada,
+	    <i>"Bayesian Inference for Small-Angle Scattering Data"</i>,
+	    The Physical Society of Japan 2023 Spring Meeting,
+	    Session 24aL3-12,
+	    Online Event, March 2023.
+	</li>
+	</ul>
+	<ul> 
   </body>
 </html>
