--- a/bayesian.html
+++ b/bayesian.html
@@ -91,7 +91,8 @@
 <dt class=leftline>直線回帰のベイズ理論</dt> 
 	   <dd class=para1>
 <a href="http://sparse-modeling.jp/" target="_blank" rel="noopener noreferrer">科学研究費補助金新学術領域研究「スパースモデリングの深化と高次元データ駆動科学の創成」</a><br>
-		   <a href="pdf/2017SpMTutorial.pdf"> 2017年度チュートリアル　第４節</a></dd>   
+		   <a href="pdf/2017SpMTutorial.pdf"> 2017年度チュートリアル　第４節</a><br>
+		  <a href="pdf/sector_model.pdf"> スライド: y=ax+bのベイズ推論</a></dd>   
 <dt class=leftline>スペクトル分解</dt>
 		<dd class=para1>  
 		  2012年12月17日　物性研<br>
