--- a/okada/index.html
+++ b/okada/index.html
@@ -105,7 +105,7 @@ Ultramicroscopy, 113811 (2023)
 
 <li>Hiroshi Shinotsuka, Kenji Nagata, Malinda Siriwardana, Hideki Yoshikawa, Hayaru Shouno, Masato Okada<br>
 "Sample structure prediction from measured XPS data using Bayesian estimation and SESSA simulator"<br>
-Journal of Electron Spectroscopy and Related Phenomena, 147370(2023)
+Journal of Electron Spectroscopy and Related Phenomena,147370(2023)
 </li>	
 
 <li>Ryuta Sasaki1, Shunki Nakagawa, Kazushi Mimura, Masato Okada, Toru Aonishi, and Yoshihisa Yamamoto<br>
@@ -142,7 +142,7 @@ Earth, Planets and Space volume 74,127 (2022)
 
 <li>Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
 "Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy"<br>
-Journal of the Physical Society of Japan. 91, 104002 (2022) 
+Journal of the Physical Society of Japan. 91,W104002 (2022) 
 </li>
 
 <li>Koki Obinata, Tomofumi Nakayama, Atsushi Ishikawa, Keitaro Sodeyama, Kenji Nagata, Yasuhiko Igarashi and Masato Okada<br>
