--- a/ueda/index.html
+++ b/ueda/index.html
@@ -1,50 +1,64 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ja">
-  <head>
-	<meta charset="UTF-8">
-	<title>Hajime Ueda</title>
-  </head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head>
+<title>
+上田　朔
+</title>
+</head>
+<body>
+<p>
+<h1>上田　朔 / Hajime Ueda</h1>
+<br>
+最終更新 : 2023.8.28<br><br>
 
-  <body>
-	<h2>上田　朔 (Hajime Ueda)</h2>  
-	<br>
-	Last updated: April 20, 2022
-	<br>
-	<hr>
-	<ul>
-	  <li>所属</li>
-	  <ul>
-		<li>東京大学大学院 理学系研究科 物理学専攻 岡田研究室</li>
-	  </ul>
-	  <li>連絡先</li>
-	  <ul>
-		<li>部屋 : 柏の葉キャンパス基盤棟　7A4</li>
-		<li>TEL : 04-7136-4128</li>
-		<li>E-mail : ueda@mns.k.u-tokyo.ac.jp</li>
-	  </ul>
-	</ul>
-	<hr>
-	<ul> 
-	  <li>プロフィール</li>
-	  2018.3 私立灘高等学校 卒業<br>
-	  2018.4 東京大学理科一類 入学<br>
-	  2022.3 東京大学工学部物理工学科 卒業<br>
-	  2022.4 東京大学大学院　新領域創成科学研究科 複雑理工学専攻 入学<br>
-	</ul>
-	<hr>
-	<ul>
-	  <li>英文学術論文</li>
-	  <ol>
-	  </ol>
-	  <li>国際学会</li>
-	  <ol reversed>
-	  </ol>
-	  <li>国内学会・シンポジウム</li>
-	  <ol reversed>
-	  </ol>
-	</ul>
-ホラー映画好き物性物理学徒です．<br>
-	<br>
-	<a href="../index.html">研究室ホームページTOP</a>
-  </body>
+
+
+</p>
+<p>
+<hr>
+<h2>連絡先</h2>
+<table>
+<tr><td>所属</td><td>東京大学　大学院新領域創成科学研究科　複雑理工学専攻　岡田研究室　修士課程</td></tr>
+<tr><td>所在地</td><td>〒277-8561 千葉県柏市柏の葉5-1-5 東京大学 新領域基盤棟</td></tr>
+<tr><td>居室</td><td>基盤棟7A8</td></tr>
+<tr><td>Email</td><td>ueda[at]mns.k.u-tokyo.ac.jp</td></tr>
+</table>
+</p>
+
+<p>
+<h2>経歴</h2>
+<table>
+<tr><td>2018年4月</td><td>東京大学　教養学部　理科一類　入学</td></tr>
+<tr><td>2022年3月</td><td>東京大学　工学部　物理工学科　卒業</td></tr>
+<tr><td>2022年4月</td><td>東京大学　大学院新領域創成科学研究科　複雑理工学専攻　岡田研究室　修士課程　入学</td></tr>
+</p>
+</table>
+
+<br>
+
+<a name="Journal Paper">[<b>英文学術論文</b>]</a></td>
+<td valign="top">
+<hr>
+<font size="4"></font>
+<ol start="2">
+    <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, and Masato Okada<br>
+        Efficient NMR measurement and data analysis supported by the Bayesian inference : The case of the heavy fermion compound YbCo2Zn20 <br>
+        arXiv:2305.05170 <br>
+        <a href="https://arxiv.org/abs/2305.05170" target="_blank">https://arxiv.org/abs/2305.05170</a><br>
+    </li>
+</ol>
+<ol start="1">
+    <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, and Masato Okada<br>
+        Bayesian Approach to T1 Analysis in NMR Spectroscopy with Applications to Solid State Physics<br>
+        J. Phys. Soc. Jpn. 92, 054002(2023) <br>
+        <a href="https://journals.jps.jp/doi/full/10.7566/JPSJ.92.054002" target="_blank">https://journals.jps.jp/doi/full/10.7566/JPSJ.92.054002</a><br>
+    </li>
+</ol>
+    
+<br>
+
+<hr>
+<a href="../index.html">戻る</a><br>
+</body>
 </html>
