bayesian.htmlを修正、lab.htmlを修正、PDFを追加

--- a/bayesian.html
+++ b/bayesian.html
@@ -86,6 +86,8 @@
   <section class="maincontent">
 <div class="section content">
       <h2>ベイズ計測の進捗とプレゼンテーション資料，解説，論文</h2>
+	<p class=home>研究方針</p>
+	<p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観 ベイズ推論</a></p>
 	<p class=home>基礎理論</p>
       <dl>
 <dt class=leftline>直線回帰のベイズ理論</dt> 
