--- a/lab.html
+++ b/lab.html
@@ -60,20 +60,13 @@
 	<p>
 	また，高次元からのデータからの知識抽出が可能となることにより，データから直接モデルを見出す「<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>」を考えることができるようになります．当研究室では，<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の創成のための基盤技術に関する研究も行っています． </p>
 
-<!--
-        <p> 最近では，<a href="http://mns.k.u-tokyo.ac.jp/index.php?%A5%B9%A5%D1%A1%BC%A5%B9%A5%E2%A5%C7%A5%EA%A5%F3%A5%B0" title="スパースモデリング (485d)">スパースモデリング</a>についての研究を盛んに行っています．これは，脳科学・神経科学では，「スパース符号化」という仮説と密接に関連し，情報科学では圧縮センシングという技術とつながりがあり，高次元の観測データからの知識抽出という切り口から，幅広い自然科学分野のデータ解析において成果をあげつつあります．詳しくは，<a href="http://mns.k.u-tokyo.ac.jp/index.php?%A5%B9%A5%D1%A1%BC%A5%B9%A5%E2%A5%C7%A5%EA%A5%F3%A5%B0" title="スパースモデリング (485d)">スパースモデリング</a>をご覧ください．また，新学術領域「疎性モデリング」のホームページは<a href="http://sparse-modeling.ne.jp" rel="nofollow">こちら</a>をご覧ください． </p>
--->
-
-<!--
-
-        <p> 本研究室では，統計力学や非線形非平衡物理学などの理論物理学の手法で<a href="http://mns.k.u-tokyo.ac.jp/index.php?%B2%AC%C5%C4%B8%A6%B5%E6%BC%BC%A4%CE%B8%A6%B5%E6%BE%D2%B2%F0" rel="nofollow">脳科学・神経科学</a>を研究するとともに，<a href="http://mns.k.u-tokyo.ac.jp/index.php?%B2%AC%C5%C4%B8%A6%B5%E6%BC%BC%A4%CE%B8%A6%B5%E6%BE%D2%B2%F0" rel="nofollow">情報統計力学・機械学習</a>をもちいて<a href="http://mns.k.u-tokyo.ac.jp/index.php?%B2%AC%C5%C4%B8%A6%B5%E6%BC%BC%A4%CE%B8%A6%B5%E6%BE%D2%B2%F0" rel="nofollow">物性物理学・地球惑星科学</a>などの自然科学の広い分野を研究しています．<a href="http://mns.k.u-tokyo.ac.jp/index.php?%B6%A6%C6%B1%B8%A6%B5%E6%C0%E8" rel="nofollow">実験研究室との共同研究</a>も盛んで，連携先である理化学研究所脳科学総合研究センターをはじめ多くの研究室との<a href="http://mns.k.u-tokyo.ac.jp/index.php?%B6%A6%C6%B1%B8%A6%B5%E6%C0%E8" rel="nofollow">共同研究</a>を行っています.詳しくは<a href="http://mns.k.u-tokyo.ac.jp/index.php?%B2%AC%C5%C4%B8%A6%B5%E6%BC%BC%A4%CE%B8%A6%B5%E6%BE%D2%B2%F0" title="岡田研究室の研究紹介 (485d)">岡田研究室の研究紹介</a>をご覧ください.</p>
--->
-
 	<p>
 本研究室では，実験研究室との共同研究も盛んで，連携先である理化学研究所脳科学総合研究センターをはじめ多くの研究室との共同研究を行っています．詳しくは岡田研究室の研究紹介をご覧ください．
 	</p>
 
         <a class="anchor" id="news"></a>
+        <h3><em>研究方針</em></h3>
+		 <p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観と ベイズ推論 </a><a class="anchor" id="news2"></a>
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/5/15 「DX-GEM拠点2023年度第2回研究会」<br>
