--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,12 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="321">
+<ol reversed start="322">
+
+<li>Haruka Tobita,Yuki Namiuchi,Takumi Komura,Hiroaki Imai, Koki Obinata, Masato Okada, Yasuhiko Igarashi and Yuya Oaki<br>
+Capacity-prediction models for organic anode-active materials of lithium-ion batteries: advances in predictors using small data"<br>
+Energy Advances, 2, 1014-1021 (2023)
+</li>
 
 <li>Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuki Kawahara, Naoya Shibata, Masato Okada<br>
 "Fast reconstruction of scanning transmission electron microscopy images using Markov random field model"<br>
