--- a/okada/index.html
+++ b/okada/index.html
@@ -113,7 +113,7 @@ Ultramicroscopy, 113811 (2023)
 Journal of Electron Spectroscopy and Related Phenomena,147370(2023)
 </li>	
 
-<li>Ryuta Sasaki1, Shunki Nakagawa, Kazushi Mimura, Masato Okada, Toru Aonishi, and Yoshihisa Yamamoto<br>
+<li>Ryuta Sasaki, Shunki Nakagawa, Kazushi Mimura, Masato Okada, Toru Aonishi, and Yoshihisa Yamamoto<br>
 "Effect of Coupling Discretization on Coherent-Ising-Machine-Implemented Hopfield Model"<br>
 Journal of the Physical Society of Japan.92, 044002 (2023) 
 </li>						
