--- a/bayesian.html
+++ b/bayesian.html
@@ -87,6 +87,7 @@
 <div class="section content">
       <h2>ベイズ計測の進捗とプレゼンテーション資料，解説，論文</h2>
 	<p class=home>研究方針</p>
+	<p><a href="pdf/mathematical_sciences.pdf">データ駆動科学の情報数理基盤</a></p>
 	<p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観 ベイズ推論</a></p>
 	<p class=home>基礎理論</p>
       <dl>
