bayesian.html, lab.html 変更、pdf追加

--- a/lab.html
+++ b/lab.html
@@ -94,7 +94,10 @@
   林　悠偉　「<a href="images/20230307_hayashi.pdf">X線小角散乱プロファイルのベイズ推定</a>」<br>
   片上　舜　「<a href="images/20230307_katakami.pdf">ベイズ推定のスキーム〜全てのユーザーのために〜</a>」
 <p>
-
+2017/11/1 「<a href="https://www.nims.go.jp/MII-I/event/tutorial2017_6.html"target="_blank"rel="noopener noreferrer">MI2Iチュートリアルセミナー (第6回)計測インフォマティクス</a>」<br>
+岡田真人 「<a href="pdf/20171101_measurement_informatics.pdf">導入編　計測インフォマティクスとベイズ推論</a>」
+<p>	
+	
 <dt class=leftline>口頭発表</dt>
 2023/3/22-25 <a href="https://www.jps.or.jp/activities/meetings/spring/spring_index.php"target="_blank"rel="noopener noreferrer">日本物理学会</a><br>
 柏村周平　　「吸収“率”ではなく吸収“量”を対象とした吸収スペクトルのベイズ的解析」<br>
