--- a/bayesian.html
+++ b/bayesian.html
@@ -93,6 +93,9 @@
       <dl>
 <dt class=leftline>直線回帰のベイズ理論</dt> 
 	   <dd class=para1>
+2017年11月1日 「<a href="https://www.nims.go.jp/MII-I/event/tutorial2017_6.html"target="_blank"rel="noopener noreferrer">MI2Iチュートリアルセミナー (第6回)計測インフォマティクス</a>」<br>
+岡田真人 「<a href="pdf/20171101_measurement_informatics.pdf">導入編　計測インフォマティクスとベイズ推論</a>」
+<p>	
 <a href="http://sparse-modeling.jp/" target="_blank" rel="noopener noreferrer">科学研究費補助金新学術領域研究「スパースモデリングの深化と高次元データ駆動科学の創成」</a><br>
 		   <a href="pdf/2017SpMTutorial.pdf"> 2017年度チュートリアル　第４節</a><br>
 		  <a href="pdf/sector_model.pdf"> スライド: y=ax+bのベイズ推論</a></dd>   
