bayesian.html, lab.html 変更、pdf追加

--- a/bayesian.html
+++ b/bayesian.html
@@ -89,6 +89,7 @@
 	<p class=home>研究方針</p>
 	<p><a href="pdf/mathematical_sciences.pdf">データ駆動科学の情報数理基盤</a></p>
 	<p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観 ベイズ推論</a></p>
+	<p><a href="pdf/hierarchystructureofnature1.pdf">階層的自然観とスパースモデリング</a></p>
 	<p class=home>基礎理論</p>
       <dl>
 <dt class=leftline>直線回帰のベイズ理論</dt> 
