--- a/lab.html
+++ b/lab.html
@@ -68,6 +68,7 @@
         <h3><em>研究方針</em></h3>
 		 <p><a href="pdf/mathematical_sciences.pdf">データ駆動科学の情報数理基盤</a><a class="anchor" id="news3"></a>
 			  <p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観とベイズ推論</a><a class="anchor" id="news2"></a>
+		<p><a href="pdf/hierarchystructureofnature1.pdf">階層的自然観とスパースモデリング</a><a class="anchor" id="news2"></a>
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/5/15 「DX-GEM拠点2023年度第2回研究会」<br>
