--- a/bayesian.html
+++ b/bayesian.html
@@ -88,8 +88,9 @@
       <h2>ベイズ計測の進捗とプレゼンテーション資料，解説，論文</h2>
 	<p class=home>研究方針</p>
 	<p><a href="pdf/mathematical_sciences.pdf">データ駆動科学の情報数理基盤</a></p>
-	<p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観 ベイズ推論</a></p>
+	<p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観とベイズ推論</a></p>
 	<p><a href="pdf/hierarchystructureofnature1.pdf">階層的自然観とスパースモデリング</a></p>
+	<p><a href="pdf/cyberphysicalsystem.pdf">データ駆動科学と民間就職 サイバーフィジカルシステムの観点から</a>
 	<p class=home>基礎理論</p>
       <dl>
 <dt class=leftline>直線回帰のベイズ理論</dt> 
