bayesian.html, lab.html 変更、pdf追加

--- a/bayesian.html
+++ b/bayesian.html
@@ -91,6 +91,7 @@
 	<p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観とベイズ推論</a></p>
 	<p><a href="pdf/hierarchystructureofnature1.pdf">階層的自然観とスパースモデリング</a></p>
 	<p><a href="pdf/approximation_algorithm.pdf">データ駆動科学と近似アルゴリズム</a>
+	<p><a href="pdf/deep_learning.pdf">データ駆動科学とディープラーニング</a>
 	<p><a href="pdf/cyberphysicalsystem.pdf">データ駆動科学と民間就職 サイバーフィジカルシステムの観点から</a>
 	
 	<p class=home>基礎理論</p>
