--- a/lab.html
+++ b/lab.html
@@ -66,8 +66,9 @@
 
         <a class="anchor" id="news"></a>
         <h3><em>研究方針</em></h3>
-		 <p><a href="pdf/mathematical_sciences.pdf">データ駆動科学の情報数理基盤</a><a class="anchor" id="news3"></a>
-			  <p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観とベイズ推論</a><a class="anchor" id="news2"></a>
+		  <p><a href="pdf/research_policy.pdf">研究の経緯とそれにもとづく研究方針</a><a class="anchor" id="news7"></a>
+	     <p><a href="pdf/mathematical_sciences.pdf">データ駆動科学の情報数理基盤</a><a class="anchor" id="news3"></a>
+	    <p><a href="pdf/hierarchystructureofnature.pdf">階層的自然観とベイズ推論</a><a class="anchor" id="news2"></a>
 		<p><a href="pdf/hierarchystructureofnature1.pdf">階層的自然観とスパースモデリング</a><a class="anchor" id="news2"></a>
 				<p><a href="pdf/approximation_algorithm.pdf">データ駆動科学と近似アルゴリズム</a><a class="anchor" id="news5"></a>
 					<p><a href="pdf/deep_learning.pdf">データ駆動科学とディープラーニング</a><a class="anchor" id="news6"></a>
