--- a/kusumi/index.html
+++ b/kusumi/index.html
@@ -1,5 +1,47 @@
-<html>
-<body>
-工事中!!!!!
+<!DOCTYPE html>
+<html lang="ja" style="height:100%;">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Taichi Kusumi</title>
+</head>
+
+<body id="index-page">
+  <h2>久住 太一 (Taichi Kusumi)</h2>
+  <br>
+  Last updated: September 3, 2023
+  <br>
+  <hr>
+  <ul>
+    <li>所属</li>
+    <ul>
+      <li>東京大学大学院新領域創成科学研究科複雑理工学専攻 岡田研究室</li>
+    </ul>
+    <li>連絡先</li>
+    <ul>
+      <li>部屋 : 柏の葉キャンパス基盤棟 7A8</li>
+      <li>E-mail: kusumi[at]mns.k.u-tokyo.ac.jp</li>
+    </ul>
+  </ul>
+  <hr>
+  <ul>
+    <li>プロフィール</li>
+    2018.4 東京大学理科一類 入学<br>
+    2022.9 東京大学文学部人文学科哲学専修 卒業<br>
+    2022.10 東京大学大学院新領域創成科学研究科複雑理工学専攻 入学<br>
+  </ul>
+  <hr>
+  <ul>
+    <li>英文学術論文</li>
+    <ol>
+      <li>
+        Taichi Kusumi, Shun Katakami, Ryo Ishikawa, Kazuaki Kawahara, Naoya Shibata, Masato Okada<br>
+        Fast Reconstruction of Scanning Transmission Electron Microscopy Images Using Markov Random Field Model<br>
+        Ultramicroscopy, 253, 2023, 113811<br>
+        <a href="https://doi.org/10.1016/j.ultramic.2023.113811">https://doi.org/10.1016/j.ultramic.2023.113811</a>
+      </li>
+    </ol>
+  </ul>
 </body>
+
 </html>
