lab.htmlを更新、pdfを追加

--- a/lab.html
+++ b/lab.html
@@ -76,6 +76,9 @@
 			
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
+2023/9/1 「物性研理論セミナー」<br>
+片上舜　「<a href="pdf/20230901_katakami.pdf">分散関係計測データに対するベイズパラメータ推定</a>」
+<p> 
 2023/5/15 「DX-GEM拠点2023年度第2回研究会」<br>
 岡田真人　「<a href="pdf/20230515DX-GEM.pdf">ベイズ計測とSPring-8全ビームラインベイズ化計画</a>」<p> 
 2023/4/19 「<a href="https://www.k.u-tokyo.ac.jp/education/seminar/"target="_blank" rel="noopener noreferrer">学融合セミナー</a>」<br>
