--- a/lab.html
+++ b/lab.html
@@ -76,7 +76,7 @@
 			
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
-2023/9/1 「物性研理論セミナー」<br>
+2023/9/1 「<a href="https://www.pasums.issp.u-tokyo.ac.jp/teams/news/1741"target="_blank" rel="noopener noreferrer">物性研理論セミナー</a>」<br>
 片上舜　「<a href="pdf/20230901_katakami.pdf">分散関係計測データに対するベイズパラメータ推定</a>」
 <p> 
 2023/5/15 「DX-GEM拠点2023年度第2回研究会」<br>
