--- a/bayesian.html
+++ b/bayesian.html
@@ -97,7 +97,11 @@
 	
 	<p class=home>基礎理論</p>
       <dl>
-<dt class=leftline>直線回帰のベイズ理論</dt> 
+<dt class=leftline>ベイズ推論習得法</dt>
+		<dd class=para1>
+			<a href="pdf/bayesian_study.pdf"> ベイズ計測の勉強の流れ</a>
+			<p></p>
+		<dt class=leftline>直線回帰のベイズ理論</dt> 
 	   <dd class=para1>
 2017年11月1日 「<a href="https://www.nims.go.jp/MII-I/event/tutorial2017_6.html"target="_blank"rel="noopener noreferrer">MI2Iチュートリアルセミナー (第6回)計測インフォマティクス</a>」<br>
 岡田真人 「<a href="pdf/20171101_measurement_informatics.pdf">導入編　計測インフォマティクスとベイズ推論</a>」
