--- a/people.html
+++ b/people.html
@@ -82,7 +82,7 @@
             <dl>
               <dt><em>柏村 周平</em></dt>
               <dd class="ename">KASHIWAMUEA, Shuhei</dd>
-              <dd class="title">MS Student</dd>
+              <dd class="title">PhD Student</dd>
               <dd class="email">kashiwamura[at]mns.k.u-tokyo.ac.jp</dd>
               <dd class="web"><a href="./kashiwamura/">HP</a></dd>
             </dl>
@@ -95,7 +95,7 @@
             <dl>
               <dt><em>塩谷 佳介</em></dt>
               <dd class="ename">SHIOYA, Keisuke</dd>
-              <dd class="title">MS Student</dd>
+              <dd class="title">PhD Student</dd>
               <dd class="email">shioya[at]mns.k.u-toky0.ac.jp</dd>
               <dd class="web"><a href="http://itachisaigo.wp.xdomain.jp/">HP</a></dd>
             </dl>
@@ -108,7 +108,7 @@
             <dl>
               <dt><em>清水 将海</em></dt>
               <dd class="ename">SHIMIZU, Masaumi</dd>
-              <dd class="title">MS Student</dd>
+              <dd class="title">PhD Student</dd>
               <dd class="email">shimizu[at]mns.k.u-tokyo.ac.jp</dd>
               <dd class="web"><a href="./shimizu/">HP</a></dd>
             </dl>
@@ -123,7 +123,7 @@
             <dl>
               <dt><em>森口 椋太</em></dt>
               <dd class="ename">MORIGUCHI, Ryota</dd>
-              <dd class="title">MS Student</dd>
+              <dd class="title">PhD Student</dd>
               <dd class="email">moriguchi[at]mns.k.u-tokyo.ac.jp</dd>
               <dd class="web"><a href="./moriguchi/">HP</a></dd>
             </dl>
@@ -269,7 +269,7 @@
             <dl>
               <dt><em>西村 怜</em></dt>
               <dd class="ename">NISHIMURA, Rei</dd>
-              <dd class="title">MS Student</dd>
+              <dd class="title">PhD Student</dd>
             </dl>
           </div>
         </div>
