--- a/okada/index.html
+++ b/okada/index.html
@@ -96,10 +96,15 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="322">
+<ol reversed start="323">
+
+<li>Shogo Yoshida, Hajime Ueda, Tetsuya Mutou, Shun Katakami, Masato Okada, Yuichi Yokoyama, Masaichiro Mizumaki, Naoka Hiraoka, Kentaro Kitagawa, Yoshinori Haga, Takuto Fujii, Yusuke Nakai, Takeshi Mito<br>
+"Unique Band Structure of Pressure Induced Semiconducting State in SmS Characterized by $^{33}$S-Nuclear Magnetic Resonance Measurements"<br>
+Journal of the Physical Society of Japan, (2023)
+</li>
 
 <li>Haruka Tobita,Yuki Namiuchi,Takumi Komura,Hiroaki Imai, Koki Obinata, Masato Okada, Yasuhiko Igarashi and Yuya Oaki<br>
-Capacity-prediction models for organic anode-active materials of lithium-ion batteries: advances in predictors using small data"<br>
+"Capacity-prediction models for organic anode-active materials of lithium-ion batteries: advances in predictors using small data"<br>
 Energy Advances, 2, 1014-1021 (2023)
 </li>
 
