岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,17 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="323">
+<ol reversed start="324">
+
+<li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, and Masato Okada<br>
+"Efficient NMR measurement and data analysis supported by the Bayesian inference : The case of the heavy fermion compound YbCo2Zn20"<br>
+Journal of Magnetic Resonance 357(2023)107585
+</li>
+
+<li>Hiroyuki Kumazoe, Kazunori Iwamitsu, Masaki Imamura, Kazutoshi Takahashi, Yoh-ichi Mototake, Masato Okada, Ichiro Akai<br>
+"Quantifying physical insights cooperatively with exhaustive search for Bayesian spectroscopy of X-ray photoelectron spectra"<br>
+Scientific Reports 13(1) (2023)
+</li>
 
 <li>Shogo Yoshida, Hajime Ueda, Tetsuya Mutou, Shun Katakami, Masato Okada, Yuichi Yokoyama, Masaichiro Mizumaki, Naoka Hiraoka, Kentaro Kitagawa, Yoshinori Haga, Takuto Fujii, Yusuke Nakai, Takeshi Mito<br>
 "Unique Band Structure of Pressure Induced Semiconducting State in SmS Characterized by $^{33}$S-Nuclear Magnetic Resonance Measurements"<br>
