岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -103,6 +103,11 @@
 Journal of Magnetic Resonance 357(2023)107585
 </li>
 
+<li>Mastiyage Don Sudeera Hasaranga Gunathilaka, Satoshi Kako, Yoshitaka Inui, Kazushi Mimura, Masato Okada, Yoshihisa Yamamoto & Toru Aonishi<br>
+"Effective implementation of L0-regularised compressed sensing with chaotic-amplitude-controlled coherent Ising machines"<br>
+Scientific Reports volume 13, 16140 (2023)
+</li>
+
 <li>Hiroyuki Kumazoe, Kazunori Iwamitsu, Masaki Imamura, Kazutoshi Takahashi, Yoh-ichi Mototake, Masato Okada, Ichiro Akai<br>
 "Quantifying physical insights cooperatively with exhaustive search for Bayesian spectroscopy of X-ray photoelectron spectra"<br>
 Scientific Reports 13(1) (2023)
