岡田先生のページを更新

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,14 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="325">
+<ol reversed start="326">
+
+<li> 
+Mitsuki Hamamichi, Kentaro Nagasawa, Masato Okada, Ryohei Seto, Yonghao Yue<br>
+"Non-Newtonian ViRheometry via Similarity Analysis"<br>
+ACM Transactions on GraphicsVolume 42Issue 6Article No.193pp 1–16
+</li>
+ 
 
 <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, and Masato Okada<br>
 "Efficient NMR measurement and data analysis supported by the Bayesian inference : The case of the heavy fermion compound YbCo2Zn20"<br>
