岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="327">
+<ol reversed start="328">
+
+<li> 
+Rei Nishimura, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
+"Bayesian Integration for Hamiltonian Parameters of Crystal Field"<br>
+Journal of the Physical Society of Japan
+</li>
 
 <li> 
 Mitsuki Hamamichi, Kentaro Nagasawa, Masato Okada, Ryohei Seto, Yonghao Yue<br>
@@ -104,7 +110,6 @@ Mitsuki Hamamichi, Kentaro Nagasawa, Masato Okada, Ryohei Seto, Yonghao Yue<br>
 ACM Transactions on GraphicsVolume 42Issue 6Article No.193pp 1–16
 </li>
  
-
 <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, and Masato Okada<br>
 "Efficient NMR measurement and data analysis supported by the Bayesian inference : The case of the heavy fermion compound YbCo2Zn20"<br>
 Journal of Magnetic Resonance 357(2023)107585
