岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2024(328～)</h4>
-<ol reversed start="328">
+<ol reversed start="329">
+
+<li> 
+Yutaro Iwabuchi, Toshitaka Baba, Takane Hori, Masato Okada, Yasuhiko Igarashia<br>
+"Tsunami Height Estimation by Gaussian Process Regression Using Maximum Pressure Change and Arrival Time at Seafloor Sensors off the Kii Peninsula, Japan"<br>
+Research Square Platform LLC
+</li>
 
 <li> 
 Rei Nishimura, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
