岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -99,7 +99,7 @@
 <ol reversed start="329">
 
 <li> 
-Yutaro Iwabuchi, Toshitaka Baba, Takane Hori, Masato Okada, Yasuhiko Igarashia<br>
+Yutaro Iwabuchi, Toshitaka Baba, Takane Hori, Masato Okada, Yasuhiko Igarashi<br>
 "Tsunami Height Estimation by Gaussian Process Regression Using Maximum Pressure Change and Arrival Time at Seafloor Sensors off the Kii Peninsula, Japan"<br>
 Research Square Platform LLC
 </li>
