--- a/kashiwamura/index.html
+++ b/kashiwamura/index.html
@@ -10,7 +10,7 @@
 <p>
 <h1>柏村　周平 / Shuhei Kashiwamura</h1>
 <br>
-最終更新 : 2022.5.18<br><br>
+最終更新 : 2024.2.6<br><br>
 
 
 
@@ -19,7 +19,7 @@
 <hr>
 <h2>連絡先</h2>
 <table>
-<tr><td>所属</td><td>東京大学　大学院理学系研究科　物理学専攻　岡田研究室　修士課程</td></tr>
+<tr><td>所属</td><td>東京大学　大学院理学系研究科　物理学専攻　岡田研究室　博士課程</td></tr>
 <tr><td>所在地</td><td>〒277-8561 千葉県柏市柏の葉5-1-5 東京大学 新領域基盤棟</td></tr>
 <tr><td>居室</td><td>基盤棟7A8</td></tr>
 <tr><td>Email</td><td>kashiwamura[at]mns.k.u-tokyo.ac.jp</td></tr>
@@ -32,6 +32,9 @@
 <tr><td>2017年4月</td><td>東京大学　教養学部　理科二類　入学</td></tr>
 <tr><td>2021年3月</td><td>東京大学　理学部　地球惑星物理学科　卒業</td></tr>
 <tr><td>2021年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　入学</td></tr>
+<tr><td>2023年3月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　卒業</td></tr>
+<tr><td>2023年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　博士課程　入学</td></tr>
+<tr><td>2023年4月</td><td>日本学術振興会特別研究員(DC1)</td></tr>
 </p>
 </table>
 
@@ -41,6 +44,13 @@
 <td valign="top">
 <hr>
 <font size="4"></font>
+<ol start="3">
+    <li>Shuhei Kashiwamura, Ayaka Sakata, Masaaki Imaizumi<br>
+        Effect of Weight Quantization on Learning Models by Typical Case Analysis<br>
+        arXiv:2401.17269<br>
+        <a href="https://browse.arxiv.org/abs/2401.17269" target="_blank">https://browse.arxiv.org/abs/2401.17269</a><br>
+    </li>
+</ol>
 <ol start="2">
     <li>Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada<br>
         Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain<br>
@@ -61,6 +71,24 @@
 <td valign="top">
 <hr>
 <font size="4"></font>
+<ol start="5">
+    <li>柏村周平, 坂田綾香，今泉允聡<br>
+        量子化回帰モデルの汎化誤差解析 <br>
+        第26回情報論的学習理論ワークショップ (IBIS2023)，北九州国際会議場，2-047，2023年10月．<br>
+    </li>
+</ol>
+<ol start="4">
+    <li>柏村周平, 坂田綾香，今泉允聡<br>
+        量子化回帰モデルの統計力学的解析 <br>
+        物理学会第78回年次大会，東北大学　川内キャンパス，2023年9月．<br>
+    </li>
+</ol>
+<ol start="3">
+    <li>柏村周平, 片上舜，岩満一功，熊添博之，永田賢二，岡島敏浩，赤井一郎，岡田真人<br>
+        吸収率ではなく吸収量を対象とした吸収スペクトルのベイズ的解析 <br>
+        物理学会2023年春季大会，オンライン開催，2023年3月．<br>
+    </li>
+</ol>
 <ol start="2">
     <li>柏村周平, 片上舜，岩満一功，熊添博之，永田賢二，岡島敏浩，赤井一郎，岡田真人<br>
         ポアソン分布を用いたX線吸収スペクトルの解析 <br>
