--- a/nabika/index.html
+++ b/nabika/index.html
@@ -8,7 +8,7 @@
   <body>
 	<h2>竝河 伴裕 (Nabika Tomohiro)</h2>  
 	<br>
-	Last updated: April 15, 2022
+	Last updated: February 13, 2024
 	<br>
 	<hr>
 	<ul>
@@ -18,7 +18,7 @@
 	  </ul>
 	  <li>連絡先</li>
 	  <ul>
-		<li>部屋 : 柏の葉キャンパス基盤棟　7A4</li>
+		<li>部屋 : 柏の葉キャンパス基盤棟 7A4</li>
 		<li>E-mail : nabika[at]mns.k.u-tokyo.ac.jp</li>
 	  </ul>
 	</ul>
@@ -28,21 +28,61 @@
 	  2018.3 栄光学園高等学校 卒業<br>
 	  2018.4 東京大学理科一類 入学<br>
 	  2022.3 東京大学工学部計数工学科数理情報工学コース 卒業<br>
+	  2022.4 東京大学新領域創成科学研究科複雑理工学専攻 入学<br>
 	</ul>
 	<hr>
 	<ul>
 	  <li>英文学術論文</li>
-	  <ol>
+	  <ol> 
+		<li>
+			(採録決定) Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada <br> 
+			"Bayesian spectral analysis with binomial disturibution noise model" <br>
+			IPSJ Online Transactions
+		</li><br>
+		<li>
+			(採録決定) Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada <br> 
+			"Bayesian active learning with model selection for spectral experiments" <br> 
+			Scientific Reports
+		</li><br>
 	  </ol>
 	  <li>国際学会</li>
 	  <ol reversed>
 	  </ol>
 	  <li>国内学会・シンポジウム</li>
+	  <ol reversed> 
+		<li>
+			竝河伴裕、永田賢二、片上舜、水牧仁一郎、岡田真人 <br>
+			ベイズ推論による光吸収スペクトルのスペクトル分解 <br>
+			第25回情報論的学習理論ワークショップ (IBIS2022)、つくば国際会議場、1-021、2022年11月
+		</li><br>
+		<li>
+			竝河伴裕、永田賢二、片上舜、水牧仁一郎、岡田真人 <br>
+			ベイズ推論による光吸収スペクトルのスペクトル分解 <br>
+			物理学会第77回年次大会、オンライン開催、2023年3月
+		</li><br>
+		<li>
+			Tomohiro Nabika, Kenji Nagata, Shun Katakami, Masaichiro Mizumaki, Masato Okada <br>
+			Bayesian spectral analysis with binomial disturibution noise model <br>
+			第145回数理モデル化と問題解決研究発表会、大阪公立大学 中百舌鳥キャンパス、2023年9月
+		</li><br>
+		<li>
+			竝河伴裕、永田賢二、片上舜、水牧仁一郎、岡田真人 <br>
+			モデル選択及びそのパラメータ推定のための能動的実験計画 <br>
+			第84回応用物理学会秋季学術講演会、熊本城ホール、2023年9月
+		</li><br>
+	  </ol>
+	  <li>受賞歴等</li>
 	  <ol reversed>
+		<li>
+			東京大学 数理・データサイエンスコンソーシアム 第６回データサイエンスコンテスト 最優秀賞
+		</li><br>
+		<li>
+			東京大学知能社会国際卓越大学院教育プログラム(GCL-IIW)。 2022 年 4月 -
+		</li><br>
 	  </ol>
 	</ul>
 	<br>
-    数学を楽しむフットサルプレイヤーです.
+    数学を楽しむフットサルプレイヤーです. 
 	<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
