岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,13 @@
 					  
 
 <h4>2024(328～)</h4>
-<ol reversed start="329">
+<ol reversed start="330">
+
+<li> 
+Tomohiro Nabika, Kenji Nagata, Masaichiro Mizumaki, Shun Katakami & Masato Okada<br>
+"Bayesian active learning with model selection for spectral experiments"<br>
+Scientific Reports volume 14, Article number: 3680 (2024) 
+</li>
 
 <li> 
 Yutaro Iwabuchi, Toshitaka Baba, Takane Hori, Masato Okada, Yasuhiko Igarashi<br>
