岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -113,7 +113,7 @@ Research Square Platform LLC
 <li> 
 Rei Nishimura, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
 "Bayesian Integration for Hamiltonian Parameters of Crystal Field"<br>
-Journal of the Physical Society of Japan
+Journal of the Physical Society of Japan  Vol.93, No.3(2024)
 </li>
 
 <h4>2023(318～)</h4>
