--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -9,7 +9,7 @@
 	<h2>林　悠偉 (Yui Hayashi)</h2>  
 	<br>
 	Last updated: 6/5/2023 
-	<li>個人のページは<a href="http://www.yuihayashi.com/">こちら</a>
+	<li><strong>個人のページはこちら -> </strong>strong><a href="http://www.yuihayashi.com/">http://www.yuihayashi.com/</a>
 </li>
 	<br>
 	<hr>
@@ -28,7 +28,9 @@
 	<hr>
 	  <li>プロフィール</li>
 	  2022.3 東京理科大学　理工学部　物理学科 卒業<br>
-	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　入学<br>
+	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　修士課程 入学
+	  2024.3 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　修士課程 卒業
+	  2024.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　博士課程 入学<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
 	<h2>Published Papers</h2>
