--- a/lab.html
+++ b/lab.html
@@ -61,7 +61,7 @@
 	また，高次元からのデータからの知識抽出が可能となることにより，データから直接モデルを見出す「<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>」を考えることができるようになります．当研究室では，<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の創成のための基盤技術に関する研究も行っています． </p>
 
 	<p>
-本研究室では，実験研究室との共同研究も盛んで，連携先である理化学研究所脳科学総合研究センターをはじめ多くの研究室との共同研究を行っています．詳しくは岡田研究室の研究紹介をご覧ください．
+本研究室では，データ駆動科学の創生を目的とし、理論と実験を問わずに多くの研究室との共同研究も盛んです。例えば、岡田の兼務先である、国立の研究機関として、連携先である NICT-情報通信研究機構 脳情報通信融合研究センター、物質・材料研究機構、高輝度光科学研究センター・放射光利用研究基盤センター (JASRI)をはじめ産業総合研究所、大学としては東大内では新領域創成科学研究科、物性研究所、他大学としては熊本大学、筑波大学などの多くの研究室との共同研究を行っています．このような共同研究に学生さんが積極的参加することを推奨し、学生さんを共同研究に巻き込んで、プロジェクト推進能力をOJT(On the Job Training)で向上させることも狙っています。
 	</p>
 
         <a class="anchor" id="news"></a>
